# DSAI5102_teaching_agent_project

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  start.bat  start.sh  start_web.bat  首页.py
.streamlit/: secrets.toml.example
app/: main.py
app/agent/: __init__.py  agent_builder.py  llm_provider.py  tools.py  worker.py
app/mcp/rag/: server.py
app/mcp/websearch/: server.py
app/memory/: __init__.py  postgres_memory.py
app/module/: streamlit_ask_ai_dialog.py  streamlit_bottom_bar.py  streamlit_settings_dialog.py
app/module/bakcup/: embed.py  llm.py
app/rag/: __init__.py  document_loader.py  vector_store.py
app/utils/: config.py  streamlit_float.py
chroma_db/: chroma.sqlite3
doc/: architecture.md  requirements.md
pages/: 01_Project_Introduction.py  02_Usage_Guide.py  03_Models_说明.py  04_FAQ.py
teaching_agent/: __init__.py
teaching_agent/agent/: worker.py
teaching_agent/llm/: llm_provider.py
teaching_agent/module/: streamlit_ask_ai_dialog.py  streamlit_settings_dialog.py
teaching_agent/utils/: __init__.py  config.py  logging_config.py
tools/: build_vectordb.py  keep_pdf_files.py
