[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teaching-agent"
version = "0.1.0"
description = "Teaching assistant agent with mcp servers"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-mistralai",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-ibm",
    "sentence-transformers",
    "openai",
    "faiss-cpu",
    "streamlit",
    "pydantic-settings",
    "PyPDF2",
    "pdfplumber",
    "ddgs"
]
