[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teaching-agent"
version = "0.1.0"
description = "Teaching assistant agent with mcp servers"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # LangChain Core
    "langchain>=0.3.15",
    "langchain-core>=0.3.28",
    "langchain-community>=0.3.15",
    
    # LangChain Model Providers
    "langchain-openai>=0.2.16",
    "langchain-anthropic>=0.3.7",
    "langchain-mistralai>=0.2.4",
    "langchain-google-genai>=2.0.7",
    "langchain-ollama>=0.2.5",
    "langchain-ibm>=0.3.3",
    
    # LangGraph & MCP
    "langgraph>=0.2.64",
    "langchain-mcp-adapters>=0.1.2",
    "mcp>=1.3.2",
    "fastmcp>=0.3.3",
    
    # AI/ML Libraries
    "sentence-transformers>=3.3.1",
    "openai>=1.59.7",
    "faiss-cpu>=1.9.0.post1",
    
    # Web Framework
    "streamlit>=1.41.1",
    "streamlit-ace>=0.1.1",
    
    # PDF Processing
    "PyMuPDF>=1.25.2",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.11.4",
    
    # Web Scraping
    "ddgs>=9.9.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "fake-useragent>=1.5.1",
    
    # Utilities
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

# 配置仅打包teaching_agent目录
[tool.setuptools]
packages = ["teaching_agent"]  # 只打包teaching_agent目录
package-dir = {"" = "."}  # teaching_agent包在项目根目录下

# 可选：包含teaching_agent目录下的非Python文件（如资源、配置文件）
[tool.setuptools.package-data]
teaching_agent = [
    "*.json", 
    "*.yml", 
    "*.yaml", 
    "*.txt", 
    "templates/*", 
    "static/*"
]

# 排除不需要的文件
[tool.setuptools.exclude-package-data]
teaching_agent = [
    "__pycache__", 
    "*.pyc", 
    "*.pyo", 
    "*.pyd",
    ".gitignore",
    ".env*"
]